# HeavenGate

./: CMakeLists.txt
docs/HeavenGate/.obsidian/: workspace.json
docs/HeavenGate/.obsidian/plugins/obsidian-tasks-plugin/: data.json
docs/HeavenGate/разработка/: Задачи.md  баги.md
go-services/: go.mod
go-services/Dashboard/: main.go
include/: colorText.h  strconv.h
scripts/: build.sh
src/: CMakeLists.txt  main.cpp
src/API/: dashboardAPI.cpp  dashboardAPI.h  dashboardAPI.hpp
src/AppManager/: AppComponent.h  AppManager.cpp  AppManager.h
src/DataBus/: BusEvent.h  DataBus.cpp  DataBus.h  DataBusMetrics.h  subscriptionID.h
src/LoadBalancer/: LoadBalancer.cpp  LoadBalancer.h  LoadBalancerMetrics.h
src/common/: Argparcer.cpp  Argparcer.h  Confparcer.cpp  Confparcer.h  generic.h  logger.cpp  logger.h
static/: index.html
static/js/: dashboard.js
static/styles/: style.css
